Removed wrong java_opt
Removed wrong java_opt